docs/api/qiskit/0.33/qiskit.pulse.transforms.AlignEquispaced.md
---
title: AlignEquispaced
description: API reference for qiskit.pulse.transforms.AlignEquispaced
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.pulse.transforms.AlignEquispaced
---

# AlignEquispaced

<span id="qiskit.pulse.transforms.AlignEquispaced" />

`AlignEquispaced(duration)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.19/qiskit/pulse/transforms/alignments.py "view source code")

Bases: `qiskit.pulse.transforms.alignments.AlignmentKind`

Align instructions with equispaced interval within a specified duration.

Instructions played on different channels are also arranged in a sequence. This alignment is convenient to create dynamical decoupling sequences such as PDD.

Create new equispaced context.

**Parameters**

**duration** (`Union`\[`int`, `ParameterExpression`]) – Duration of this context. This should be larger than the schedule duration. If the specified duration is shorter than the schedule duration, no alignment is performed and the input schedule is just returned. This duration can be parametrized.

## Methods

### align

<span id="qiskit.pulse.transforms.AlignEquispaced.align" />

`AlignEquispaced.align(schedule)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.19/qiskit/pulse/transforms/alignments.py "view source code")

Reallocate instructions according to the policy.

Only top-level sub-schedules are aligned. If sub-schedules are nested, nested schedules are not recursively aligned.

**Parameters**

**schedule** (`Schedule`) – Schedule to align.

**Return type**

`Schedule`

**Returns**

Schedule with reallocated instructions.

### to\_dict

<span id="qiskit.pulse.transforms.AlignEquispaced.to_dict" />

`AlignEquispaced.to_dict()` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.19/qiskit/pulse/transforms/alignments.py "view source code")

Returns dictionary to represent this alignment.

**Return type**

`Dict`\[`str`, `Any`]

## Attributes

<span id="qiskit.pulse.transforms.AlignEquispaced.duration" />

### duration

Return context duration.

<span id="qiskit.pulse.transforms.AlignEquispaced.is_sequential" />

### is\_sequential

`= True`

